--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,8 +35,8 @@ tools:context="archfx.com.epidermicare.activity.LoginActivity">
 
         <TextView
             android:id="@+id/Titlelogin"
-            android:layout_width="162dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fontFamily="sans-serif"
             android:text="EpidemiCare App"
             android:textAlignment="center"
@@ -63,7 +63,7 @@ tools:context="archfx.com.epidermicare.activity.LoginActivity">
 
             <ImageView
                 android:id="@+id/logo"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="78dp"
                 android:visibility="visible"
                 app:srcCompat="@drawable/splash"
