--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -80,6 +80,13 @@
 
                 </com.github.mikephil.charting.charts.PieChart>
 
+                <Button
+                    android:id="@+id/backButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="onClickback"
+                    android:text="Back" />
+
             </LinearLayout>
         </android.support.constraint.ConstraintLayout>
     </FrameLayout>
